unpackaged/main/default/objects/breadwinner_ns__BW_Employee__c/breadwinner_ns__BW_Employee__c.object-meta.xml
<CustomObject>
    <label>NetSuite Employee</label>
    <nameField>
        <label>Employee Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NetSuite Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>