unpackaged/main/default/objects/breadwinner_ns__BW_Employee__c/fields/breadwinner_ns__Approver__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense Approver</label>
    <referenceTo>breadwinner_ns__BW_Employee__c</referenceTo>
    <relationshipLabel>NetSuite Employees (Expense Approver)</relationshipLabel>
    <relationshipName>ExpenseApprovableEmployees</relationshipName>
    <type>Lookup</type>
</CustomField>