unpackaged/main/default/objects/breadwinner_ns__BW_Employee__c/fields/breadwinner_ns__Currency__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Currency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Currency</label>
    <referenceTo>breadwinner_ns__BW_Currency__c</referenceTo>
    <relationshipLabel>NetSuite Employees</relationshipLabel>
    <relationshipName>BWEmployees</relationshipName>
    <type>Lookup</type>
</CustomField>