unpackaged/main/default/objects/breadwinner_ns__BW_Employee__c/fields/breadwinner_ns__CurrencyInternalIdList__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__CurrencyInternalIdList__c</fullName>
    <label>Currency List</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>