unpackaged/main/default/objects/breadwinner_ns__BW_Employee__c/fields/breadwinner_ns__Do_not_Import_Vendor_Payments__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Do_not_Import_Vendor_Payments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not Import Vendor Payments</label>
    <type>Checkbox</type>
</CustomField>