unpackaged/main/default/objects/breadwinner_ns__BW_Employee__c/fields/breadwinner_ns__GiveAccess__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__GiveAccess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Login Access</label>
    <type>Checkbox</type>
</CustomField>