unpackaged/main/default/objects/breadwinner_ns__BW_Employee__c/fields/breadwinner_ns__HireDate__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__HireDate__c</fullName>
    <label>Hire Date</label>
    <type>Date</type>
</CustomField>