unpackaged/main/default/objects/breadwinner_ns__BW_Employee__c/fields/breadwinner_ns__IsSalesRep__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__IsSalesRep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Rep</label>
    <type>Checkbox</type>
</CustomField>