unpackaged/main/default/objects/breadwinner_ns__BW_Employee__c/fields/breadwinner_ns__Phone__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Phone__c</fullName>
    <label>Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>