unpackaged/main/default/objects/breadwinner_ns__BW_Employee__c/fields/breadwinner_ns__PurchaseApprovalLimit__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__PurchaseApprovalLimit__c</fullName>
    <label>Purchase Approval Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>