unpackaged/main/default/objects/breadwinner_ns__BW_Employee__c/fields/breadwinner_ns__PurchaseOrderApprover__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__PurchaseOrderApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Approver</label>
    <referenceTo>breadwinner_ns__BW_Employee__c</referenceTo>
    <relationshipLabel>NetSuite Employees (Purchase Approver)</relationshipLabel>
    <relationshipName>PurchaseApprovableEmployees</relationshipName>
    <type>Lookup</type>
</CustomField>