unpackaged/main/default/objects/breadwinner_ns__BW_Employee__c/fields/breadwinner_ns__Salesforce_User__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Salesforce_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesforce User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BWEmployees</relationshipName>
    <type>Lookup</type>
</CustomField>