unpackaged/main/default/objects/breadwinner_ns__BW_Employee__c/listViews/breadwinner_ns__All.listView-meta.xml
<ListView>
    <fullName>breadwinner_ns__All</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_ns__GiveAccess__c</columns>
    <columns>breadwinner_ns__IsInactive__c</columns>
    <columns>breadwinner_ns__Email__c</columns>
    <columns>breadwinner_ns__Title__c</columns>
    <columns>breadwinner_ns__Supervisor__c</columns>
    <columns>breadwinner_ns__Subsidiary__c</columns>
    <columns>breadwinner_ns__Currency__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>